--- a/html/index.html
+++ b/html/index.html
@@ -1,13 +1,62 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.min.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.min.css" />
     <title>Página principal</title>
 </head>
+
 <body>
-    
+    <header class="xlc-header">
+        <div class="xlc-header-container">
+            <div class="xlc-header-logo">
+                <a href="#" ><img src="../img/logo_blanco.png" alt="" /></a>
+            </div>
+            <ul class="xlc-header-menu1">
+                <li><a href="">Inicio</a></li>
+                <li><a href="">Nosotros</a></li>
+                <li><a href="">Proyectos</a></li>
+                <li><a href="">Tienda</a></li>
+                
+            </ul>
+            <ul class="xlc-header-menu2">
+                <li><a href="">Dona</a></li>
+                <li><a href="">Colabora</a></li>
+            </ul>
+        </div>
+    </header>
+    <div class="xlc-section xlc-bg-w-img xlc-bg-multiply-blend"></div>
+    <div class="xlc-section xlc-bg-w-color"></div>
+
+    <script>
+        // TODO:    - Este script quizá hay que moverlo a un archivo de js
+        //          - Cambiar las variables para que sigan el estandar establecido
+
+        var new_scroll_position = 0;
+        var last_scroll_position;
+        var header = document.getElementsByClassName('xlc-header')[0]
+
+        window.addEventListener("scroll", () => {
+            last_scroll_position = window.scrollY;
+
+            if (
+                new_scroll_position < last_scroll_position &&
+                last_scroll_position > 80 && 
+                new_scroll_position != 0
+            ) {
+                header.classList.remove("slideDown");
+                header.classList.add("slideUp");
+            } else if (new_scroll_position > last_scroll_position) {
+                header.classList.remove("slideUp");
+                header.classList.add("slideDown");
+            }
+
+            new_scroll_position = last_scroll_position;
+        });
+    </script>
 </body>
+
 </html>
