estilos de las secciones

--- a/html/index.html
+++ b/html/index.html
@@ -28,8 +28,63 @@
             </ul>
         </div>
     </header>
-    <div class="xlc-section xlc-bg-w-img xlc-bg-multiply-blend"></div>
-    <div class="xlc-section xlc-bg-w-color"></div>
+
+    <div class="xlc-section-vp xlc-bg-w-img xlc-bg-multiply-blend xlc-section-start">
+        <div class="xlc-content-col">
+            <h1 class="xlc-content-title">Queremos un mundo donde los humanos seamos una especie en equilibrio con el medio.</h1>
+            <p class="xlc-content-text">Implicamos a toda la sociedad en la conservación de la mar, y especialmente, de sus animales más emblemáticos (delfines, tortugas marinas, caballitos de mar…) y los hábitats locales, a través de campañas de comunicación con rigor científico dirigidas a la acción y actividades inclusivas y útiles.</p>
+            <div class="xlc-content-newsletter"></div>
+        </div>
+    </div>
+
+    <div class="xlc-section-vp xlc-bg-opacity xlc-section-presentation">
+        <div class="xlc-content-col">
+            <h2 class="xlc-content-title" style="grid-area: title; margin-bottom: 10rem;">Xaloc, estudio y conservación del entorno</h2>
+            <div class="xlc-card-somos" style="grid-area: card1;">
+                <span>1</span>
+                <h3>Quiénes somos</h3>
+                <p>Somos una asociación implicada en la conservación del entorno marino, siendo nuestras principales líneas de actuación la divulgación, concienciación e investigación marina, centradas en los cetáceos (delfines, ballenas, etc.) y las tortugas marinas del Mediterráneo.</p>
+            </div>
+            <div class="xlc-card-somos" style="grid-area: card2;">
+                <span>2</span>
+                <h3>Qué hacemos</h3>
+                <p>Queremos ser útiles fomentando y llevando a cabo proyectos que sirvan de verdad en la regeneración y creación de biodiversidad y, queremos implicar a toda la sociedad.</p>
+            </div>
+            <div class="xlc-card-somos" style="grid-area: card3;">
+                <span>3</span>
+                <h3>Nuestro posicionamiento</h3>
+                <p>Nos dedicamos a la conservación, estudio y divulgación de la mar desde una visión multidiciplinar donde todas las personas pueden aportar su granito de arena. Queremos ser útiles fomentando y llevando a cabo proyectos que sirvan de verdad en la regeneración y creación de biodiversidad y, queremos implicar a toda la sociedad.</p>
+            </div>
+
+            <a href="" class="xlc-btn">CONÓCENOS</a>
+        </div>
+    </div>
+
+    <div class="xlc-section-vp xlc-bg-w-color xlc-section-colabora">
+        <div class="xlc-content-col">
+            <div>
+                <h2>¡Colabora!</h2>
+                <p>Somos una asociación implicada en la conservación del entorno marino, siendo nuestras principales líneas de actuación la divulgación, concienciación e investigación marina, centradas en los cetáceos (delfines, ballenas, etc.) y las tortugas marinas del Mediterráneo.</p>
+            </div>
+            <a href="" class="xlc-btn">¿QUÉ PUEDO HACER YO?</a>
+            <img src="../img/index/avery-cocozziello-X6Gd1gd2gX0-unsplash.png" class="xlc-bg-color" style="grid-area: photo1;" alt="">
+            <span style="grid-area: alt1;">Si eres un/a particular</span>
+            <img src="../img/index/artem-maltsev-0CvHQ62gwY8-unsplash.png" class="xlc-bg-color" style="grid-area: photo2;" alt="">
+            <span style="grid-area: alt2">Si eres una empresa</span>
+        </div>
+    </div>
+
+    <div class="xlc-section xlc-bg-w-color">
+
+    </div>
+
+    <div class="xlc-section xlc-bg-w-color">
+
+    </div>
+
+    <footer class="xlc-footer">
+
+    </footer>
 
     <script>
         // TODO:    - Este script quizá hay que moverlo a un archivo de js
