estilos de las secciones + arreglo del header

--- a/html/index.html
+++ b/html/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
-<html lang="es">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.min.css" />
-    <title>Página principal</title>
-</head>
-
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/css/style.min.css" />
+        <title>Página principal</title>
+    </head>
 <body>
-    <header class="xlc-header">
-        <div class="xlc-header-container">
-            <div class="xlc-header-logo">
-                <a href="#" ><img src="../img/logo_blanco.png" alt="" /></a>
-            </div>
+    <header class="xlc-container xlc-header">
+        <div class="xlc-grid">
+            <a class="xlc-header-logo" href="#" ><img src="../img/logo_blanco.png" alt="" /></a>
             <ul class="xlc-header-menu1">
                 <li><a href="">Inicio</a></li>
                 <li><a href="">Nosotros</a></li>
@@ -29,89 +25,107 @@
         </div>
     </header>
 
-    <div class="xlc-section-vp xlc-bg-w-img xlc-bg-multiply-blend xlc-section-start">
-        <div class="xlc-content-col">
-            <h1 class="xlc-content-title">Queremos un mundo donde los humanos seamos una especie en equilibrio con el medio.</h1>
-            <p class="xlc-content-text">Implicamos a toda la sociedad en la conservación de la mar, y especialmente, de sus animales más emblemáticos (delfines, tortugas marinas, caballitos de mar…) y los hábitats locales, a través de campañas de comunicación con rigor científico dirigidas a la acción y actividades inclusivas y útiles.</p>
-            <div class="xlc-content-newsletter"></div>
+    <div class="xlc-container xlc-section-vp xlc-init-section">
+        <div class="xlc-grid">
+            <h1 class="xlc-title">Queremos un mundo donde los humanos seamos una especie en equilibrio con el medio.</h1>
+            <p class="xlc-subtitle">Implicamos a toda la sociedad en la conservación de la mar, y especialmente, de sus animales más emblemáticos (delfines, tortugas marinas, caballitos de mar…) y los hábitats locales, a través de campañas de comunicación con rigor científico dirigidas a la acción y actividades inclusivas y útiles.</p>
+            <div></div>
         </div>
     </div>
 
-    <div class="xlc-section-vp xlc-bg-opacity xlc-section-presentation">
-        <div class="xlc-content-col">
-            <h2 class="xlc-content-title" style="grid-area: title; margin-bottom: 10rem;">Xaloc, estudio y conservación del entorno</h2>
-            <div class="xlc-card-somos" style="grid-area: card1;">
-                <span>1</span>
-                <h3>Quiénes somos</h3>
-                <p>Somos una asociación implicada en la conservación del entorno marino, siendo nuestras principales líneas de actuación la divulgación, concienciación e investigación marina, centradas en los cetáceos (delfines, ballenas, etc.) y las tortugas marinas del Mediterráneo.</p>
+    <div class="xlc-container xlc-section-vp xlc-nosotros-section">
+        <div class="xlc-grid">
+            <h2 class="xlc-title">Xaloc, estudio y conservación del entorno</h2>
+            <div class="xlc-enum-card">
+                <span class="xlc-number">1</span>
+                <h3 class="xlc-title-card">Quiénes somos</h3>
+                <p class="xlc-description-card">Somos una asociación implicada en la conservación del entorno marino, siendo nuestras principales líneas de actuación la divulgación, concienciación e investigación marina, centradas en los cetáceos (delfines, ballenas, etc.) y las tortugas marinas del Mediterráneo.</p>
             </div>
-            <div class="xlc-card-somos" style="grid-area: card2;">
-                <span>2</span>
-                <h3>Qué hacemos</h3>
-                <p>Queremos ser útiles fomentando y llevando a cabo proyectos que sirvan de verdad en la regeneración y creación de biodiversidad y, queremos implicar a toda la sociedad.</p>
+            <div class="xlc-enum-card">
+                <span class="xlc-number">2</span>
+                <h3 class="xlc-title-card">Qué hacemos</h3>
+                <p class="xlc-description-card">Queremos ser útiles fomentando y llevando a cabo proyectos que sirvan de verdad en la regeneración y creación de biodiversidad y, queremos implicar a toda la sociedad.</p>
             </div>
-            <div class="xlc-card-somos" style="grid-area: card3;">
-                <span>3</span>
-                <h3>Nuestro posicionamiento</h3>
-                <p>Nos dedicamos a la conservación, estudio y divulgación de la mar desde una visión multidiciplinar donde todas las personas pueden aportar su granito de arena. Queremos ser útiles fomentando y llevando a cabo proyectos que sirvan de verdad en la regeneración y creación de biodiversidad y, queremos implicar a toda la sociedad.</p>
+            <div class="xlc-enum-card">
+                <span class="xlc-number">3</span>
+                <h3 class="xlc-title-card">Nuestro posicionamiento</h3>
+                <p class="xlc-description-card">Nos dedicamos a la conservación, estudio y divulgación de la mar desde una visión multidiciplinar donde todas las personas pueden aportar su granito de arena. Queremos ser útiles fomentando y llevando a cabo proyectos que sirvan de verdad en la regeneración y creación de biodiversidad y, queremos implicar a toda la sociedad.</p>
             </div>
-
-            <a href="" class="xlc-btn">CONÓCENOS</a>
+            <a href="" class="xlc-orange-btn">CONÓCENOS</a>
         </div>
     </div>
 
-    <div class="xlc-section-vp xlc-bg-w-color xlc-section-colabora">
-        <div class="xlc-content-col">
-            <div>
-                <h2>¡Colabora!</h2>
-                <p>Somos una asociación implicada en la conservación del entorno marino, siendo nuestras principales líneas de actuación la divulgación, concienciación e investigación marina, centradas en los cetáceos (delfines, ballenas, etc.) y las tortugas marinas del Mediterráneo.</p>
+    <div class="xlc-container xlc-section-vp xlc-colabora-section">
+        <div class="xlc-grid">
+            <h2 class="xlc-title">¡Colabora!</h2>
+            <p class="xlc-subtitle">Somos una asociación implicada en la conservación del entorno marino, siendo nuestras principales líneas de actuación la divulgación, concienciación e investigación marina, centradas en los cetáceos (delfines, ballenas, etc.) y las tortugas marinas del Mediterráneo.</p>
+            <a href="" class="xlc-orange-btn">¿Qué puedo hacer yo?</a>
+            <div class="xlc-img-card">
+                <div class="xlc-img">
+                    <img src="../img/index/avery-cocozziello-X6Gd1gd2gX0-unsplash.png" alt="">
+                </div>
+                <span class="xlc-caption">Si eres un/a particular</span>
             </div>
-            <a href="" class="xlc-btn">¿QUÉ PUEDO HACER YO?</a>
-            <img src="../img/index/avery-cocozziello-X6Gd1gd2gX0-unsplash.png" class="xlc-bg-color" style="grid-area: photo1;" alt="">
-            <span style="grid-area: alt1;">Si eres un/a particular</span>
-            <img src="../img/index/artem-maltsev-0CvHQ62gwY8-unsplash.png" class="xlc-bg-color" style="grid-area: photo2;" alt="">
-            <span style="grid-area: alt2">Si eres una empresa</span>
+            <div class="xlc-img-card">
+                <div class="xlc-img">
+                    <img src="../img/index/artem-maltsev-0CvHQ62gwY8-unsplash.png" alt="">
+                </div>
+                <span class="xlc-caption">Si eres una empresa</span>
+            </div>
         </div>
     </div>
 
-    <div class="xlc-section xlc-bg-w-color">
-
+    <div class="xlc-container xlc-section-vp">
+        AQUÍ VA EL VIDEO
     </div>
 
-    <div class="xlc-section xlc-bg-w-color">
-
+    <div class="xlc-container xlc-proyectos-section">
+        <div class="xlc-grid">
+            <h2 class="xlc-title">Nuestros proyectos</h2>
+            <p class="xlc-subtitle">Nos dedicamos a la conservación, estudio y divulgación de la mar desde una visión multidiciplinar donde todas las personas pueden aportar su granito de arena.</p>
+        </div>
+        <div class="xlc-projects-list">
+            <div class="xlc-project">
+                hola
+            </div>
+            <div class="xlc-project">
+                hola
+            </div>
+            <div class="xlc-project">
+                hola
+            </div>
+            <div class="xlc-project">
+                hola
+            </div>
+            <div class="xlc-project">
+                hola
+            </div>
+            <div class="xlc-project">
+                hola
+            </div>
+            <div class="xlc-project">
+                hola
+            </div>
+            <div class="xlc-project">
+                hola
+            </div>
+            <div class="xlc-project">
+                hola
+            </div>
+            <div class="xlc-project">
+                hola
+            </div>
+            <div class="xlc-project">
+                hola
+            </div>
+            <div class="xlc-project">
+                hola
+            </div>
+        </div>
     </div>
 
-    <footer class="xlc-footer">
+    <footer></footer>
 
-    </footer>
-
-    <script>
-        // TODO:    - Este script quizá hay que moverlo a un archivo de js
-        //          - Cambiar las variables para que sigan el estandar establecido
-
-        var new_scroll_position = 0;
-        var last_scroll_position;
-        var header = document.getElementsByClassName('xlc-header')[0]
-
-        window.addEventListener("scroll", () => {
-            last_scroll_position = window.scrollY;
-
-            if (
-                new_scroll_position < last_scroll_position &&
-                last_scroll_position > 80 && 
-                new_scroll_position != 0
-            ) {
-                header.classList.remove("slideDown");
-                header.classList.add("slideUp");
-            } else if (new_scroll_position > last_scroll_position) {
-                header.classList.remove("slideUp");
-                header.classList.add("slideDown");
-            }
-
-            new_scroll_position = last_scroll_position;
-        });
-    </script>
+    <script src="../js/script.js"></script>
 </body>
-
 </html>
