estilos de los proyectos

--- a/html/index.html
+++ b/html/index.html
@@ -86,41 +86,97 @@
         </div>
         <div class="xlc-projects-list">
             <div class="xlc-project">
-                hola
+                <h3 class="xlc-project-title">Campamento Tortuga</h3>
+                <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
+                <div class="xlc-project-img">
+                    <img src="../img/index/campamento4.png" alt="">
+                </div>
             </div>
             <div class="xlc-project">
-                hola
+                <h3 class="xlc-project-title">Campamento Tortuga</h3>
+                <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
+                <div class="xlc-project-img">
+                    <img src="../img/index/campamento4.png" alt="">
+                </div>
             </div>
             <div class="xlc-project">
-                hola
+                <h3 class="xlc-project-title">Campamento Tortuga</h3>
+                <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
+                <div class="xlc-project-img">
+                    <img src="../img/index/campamento4.png" alt="">
+                </div>
             </div>
             <div class="xlc-project">
-                hola
+                <h3 class="xlc-project-title">Campamento Tortuga</h3>
+                <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
+                <div class="xlc-project-img">
+                    <img src="../img/index/campamento4.png" alt="">
+                </div>
             </div>
             <div class="xlc-project">
-                hola
+                <h3 class="xlc-project-title">Campamento Tortuga</h3>
+                <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
+                <div class="xlc-project-img">
+                    <img src="../img/index/campamento4.png" alt="">
+                </div>
             </div>
             <div class="xlc-project">
-                hola
+                <h3 class="xlc-project-title">Campamento Tortuga</h3>
+                <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
+                <div class="xlc-project-img">
+                    <img src="../img/index/campamento4.png" alt="">
+                </div>
             </div>
             <div class="xlc-project">
-                hola
+                <h3 class="xlc-project-title">Campamento Tortuga</h3>
+                <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
+                <div class="xlc-project-img">
+                    <img src="../img/index/campamento4.png" alt="">
+                </div>
             </div>
             <div class="xlc-project">
-                hola
+                <h3 class="xlc-project-title">Campamento Tortuga</h3>
+                <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
+                <div class="xlc-project-img">
+                    <img src="../img/index/campamento4.png" alt="">
+                </div>
             </div>
             <div class="xlc-project">
-                hola
+                <h3 class="xlc-project-title">Campamento Tortuga</h3>
+                <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
+                <div class="xlc-project-img">
+                    <img src="../img/index/campamento4.png" alt="">
+                </div>
             </div>
             <div class="xlc-project">
-                hola
+                <h3 class="xlc-project-title">Campamento Tortuga</h3>
+                <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
+                <div class="xlc-project-img">
+                    <img src="../img/index/campamento4.png" alt="">
+                </div>
             </div>
             <div class="xlc-project">
-                hola
+                <h3 class="xlc-project-title">Campamento Tortuga</h3>
+                <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
+                <div class="xlc-project-img">
+                    <img src="../img/index/campamento4.png" alt="">
+                </div>
             </div>
             <div class="xlc-project">
-                hola
+                <h3 class="xlc-project-title">Campamento Tortuga</h3>
+                <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
+                <div class="xlc-project-img">
+                    <img src="../img/index/campamento4.png" alt="">
+                </div>
             </div>
+            <div class="xlc-all-project">
+                <h3 class="xlc-project-title">Todos los proyectos</h3>
+                <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
+                <div class="xlc-project-img">
+                    <img src="../img/index/limpieza1.png" alt="">
+                </div>
+            </div>
+            
         </div>
     </div>
 
