footer guias terminadas falta estilos y background

--- a/html/index.html
+++ b/html/index.html
@@ -89,77 +89,77 @@
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/campamento4.png" alt="">
+                    <img src="../img/index/proyectos/campamento4.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/campamento4.png" alt="">
+                    <img src="../img/index/proyectos/limpieza-playas-2.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/campamento4.png" alt="">
+                    <img src="../img/index/proyectos/cabecera-plantas.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/campamento4.png" alt="">
+                    <img src="../img/index/proyectos/erizo-1.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/campamento4.png" alt="">
+                    <img src="../img/index/proyectos/alerta4-1.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/campamento4.png" alt="">
+                    <img src="../img/index/proyectos/texto-micro.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/campamento4.png" alt="">
+                    <img src="../img/index/proyectos/playa.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/campamento4.png" alt="">
+                    <img src="../img/index/proyectos/campamento9.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/campamento4.png" alt="">
+                    <img src="../img/index/proyectos/Temperatura.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/campamento4.png" alt="">
+                    <img src="../img/index/proyectos/cabecera-palitos.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/campamento4.png" alt="">
+                    <img src="../img/index/proyectos/palitos3.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
@@ -180,7 +180,88 @@
         </div>
     </div>
 
-    <footer></footer>
+    <div class="xlc-container xlc-marcas-section">
+        <div class="xlc-grid">
+            <h2 class="xlc-title">Empresas colaboradoras</h2>
+        </div>
+        <div class="xlc-marcas-list">
+            <div class="xlc-marca">
+                <img src="../img/index/marcas/Grupo 48.png" alt="">
+            </div>
+            <div class="xlc-marca">
+                <img src="../img/index/marcas/Grupo 49.png" alt="">
+            </div>
+            <div class="xlc-marca">
+                <img src="../img/index/marcas/Grupo 368.png" alt="">
+            </div>
+            <div class="xlc-marca">
+                <img src="../img/index/marcas/Grupo 72.png" alt="">
+            </div>
+            <div class="xlc-marca">
+                <img src="../img/index/marcas/Grupo 107.png" alt="">
+            </div>
+            <div class="xlc-marca">
+                <img src="../img/index/marcas/Grupo 118.png" alt="">
+            </div>
+            <div class="xlc-marca">
+                <img src="../img/index/marcas/Grupo 165.png" alt="">
+            </div>
+            <div class="xlc-marca">
+                <img src="../img/index/marcas/Grupo 166.png" alt="">
+            </div>
+            <div class="xlc-marca">
+                <img src="../img/index/marcas/Grupo 331.png" alt="">
+            </div>
+            <div class="xlc-marca">
+                <img src="../img/index/marcas/Grupo 332.png" alt="">
+            </div>
+            <div class="xlc-marca">
+                <img src="../img/index/marcas/Grupo 349.png" alt="">
+            </div>
+            <div class="xlc-marca">
+                <img src="../img/index/marcas/Grupo 350.png" alt="">
+            </div>
+        </div>
+    </div>
+
+    <footer class="xlc-container xlc-footer">
+        <div class="xlc-grid xlc-footer-section">
+            <h2 class="xlc-title">¡Dona!</h2>
+            <p class="xlc-subtitle">Con tu donación nos ayudas a seguir realizando proyectos propios para concienciar al mayor número de personas sobre los problemas medioambientales y avanzar en la conservación del entorno marino. </p>
+            <a class="xlc-orange-btn" href="">QUIERO AYUDAR</a>
+        </div>
+        <div class="xlc-grid  xlc-footer-info">
+            <ul class="xlc-links">
+                <li><a href="">Inicio</a></li>
+                <li><a href="">Nosotros</a></li>
+                <li><a href="">Proyectos</a></li>
+                <li><a href="">Contacto</a></li>
+                <li><a href="">Colabora</a></li>
+                <li><a href="">Dona</a></li>
+            </ul>
+            <p class="xlc-legal-info">Envíos y devoluciones<br/>
+                Aviso legal y política de privacidad<br/>
+                Política de cookies</p>
+            <div class="xlc-newsletter"></div>
+            <a href="" class="xlc-footer-logo">
+                <img src="" alt="">
+            </a>
+            <p class="xlc-ubi-info">Asociación para el estudio <br/>
+                y conservación del mar<br/>
+                Calle de la Democracia, 31 puerta 12<br/>
+                46018 Valencia – España<br/>
+                CIF: G98261266<br/>
+                +34 960 226 499<br/>
+                xaloc@hermanosdesal.org</p>
+            <div class="xlc-rrss">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+            <span class="xlc-copyright">Copyright ©2020 Xaloc. Todos los derechos reservados.</span>
+        </div>
+    </footer>
 
     <script src="../js/script.js"></script>
 </body>
